--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,10 @@
                         </div>
                         <div
                             id="data-footer"
-                            class="card-footer text-center collapse p-0"
+                            class="card-footer text-center collapse px-0 pt-0"
                         >
                             <div class="row text-left m-0">
-                                <div class="ml-auto col-6 bg-dark">
+                                <div class="ml-auto col-6">
                                     <div class="row">
                                         <div class="col-12">Server:</div>
                                     </div>
@@ -61,36 +61,45 @@
                                         </div>
                                     </div>
                                     <div class="row">
+                                        <div class="col-12">Type:</div>
+                                    </div>
+                                    <div class="row">
                                         <div class="col-12">Players:</div>
                                     </div>
                                     <div class="row">
                                         <div class="col-12">Password:</div>
                                     </div>
                                 </div>
-                                <div class="mr-auto col-6 bg-dark">
+                                <div class="mr-auto col-6">
                                     <div class="row">
-                                        <div
-                                            id="servstatus"
-                                            class="col-12"
-                                        ></div>
+                                        <div class="col-12">
+                                            <span id="servstatus"></span>
+                                        </div>
                                     </div>
                                     <div class="row">
-                                        <div id="pfstatus" class="col-12"></div>
+                                        <div class="col-12">
+                                            <span id="pfstatus"></span>
+                                        </div>
                                     </div>
                                     <div class="row">
-                                        <div
-                                            id="servversion"
-                                            class="col-12"
-                                        ></div>
+                                        <div class="col-12">
+                                            <span id="servversion"></span>
+                                        </div>
                                     </div>
                                     <div class="row">
-                                        <div
-                                            id="servplayers"
-                                            class="col-12"
-                                        ></div>
+                                        <div class="col-12">
+                                            <span id="servtype"></span>
+                                        </div>
                                     </div>
                                     <div class="row">
-                                        <div id="servpass" class="col-12"></div>
+                                        <div class="col-12">
+                                            <span id="servplayers"></span>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <span id="servpass"></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -170,9 +179,13 @@
                                 ")";
                             $("#servversion").addClass("bg-warning");
                             $("#servversion").addClass("text-dark");
+                        } else {
+                            $("#servversion").addClass("bg-success");
+                            $("#servversion").addClass("text-dark");
                         }
                         $("#servversion").text(data.Version);
 
+                        $("#servtype").text(data.Type);
                         $("#servplayers").text(data.PlayerCount);
 
                         $("#servpass").text(data.Password);
